# FlowchartEditor

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
controller/: controller.cpp  controller.h  drawer.cpp  drawer.h  filer.cpp  filer.h  redoundoer.cpp  redoundoer.h  remover.cpp  remover.h  updater.cpp  updater.h
model/: config.h
model/elements/: connectorelement.cpp  connectorelement.h  dataelement.cpp  dataelement.h  decisionelement.cpp  decisionelement.h  documentelement.cpp  documentelement.h  flowchartelement.cpp  flowchartelement.h  label.cpp  label.h  line.cpp  line.h  processelement.cpp  processelement.h  startendelement.cpp  startendelement.h  subprocesselement.cpp  subprocesselement.h
view/: canvas.cpp  canvas.h  replacedialog.cpp  replacedialog.h
